[backend] can migration : adding a column containing signProtocol information
